[package]
name = "wgpu_render"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
#debug = true
strip = "debuginfo"
codegen-units = 1
opt-level = 3
lto = "fat"
panic = "abort"

[features]
default = []
wee_alloc = [ "dep:wee_alloc" ]

[dependencies]
pollster = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
wee_alloc = { version = "0.4.5", optional = true }
wgpu = "0.20.0"
winit = { version = "0.30.0", default-features = false, features = ["rwh_06", "x11"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wgpu = { version = "0.20.0", features = ["webgl"] }
web-sys = { version = "0.3.69", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Window",
]}
